@@ -1,3 +1,10 @@
+2005-11-03  Christian Persch  <chpe@cvs.gnome.org>
+
+	* lib/widgets/ephy-location-entry.c: (favicon_drag_begin_cb),
+	(ephy_location_entry_construct_contents):
+
+	Simplify the drag icon code.
+
 2005-11-02  Christian Persch  <chpe@cvs.gnome.org>
 
 	* lib/widgets/ephy-location-entry.c: (favicon_create_drag_pixmap),
